--- a/OpenLayers.html
+++ b/OpenLayers.html
@@ -6,10 +6,10 @@
         <link rel="stylesheet" href="OpenLayers-2.13.1/theme/default/style.css" type="text/css">
         <link rel="stylesheet" href="style.css" type="text/css">
 		<style type="text/css">
-            html, body, #map {
+            html, body{
                 margin: 0;
-                width: 70%;
-                height: 70%;
+                width: 100%;
+                height: 100%;
             }
 
             #text {
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-	<h1>OpenLayers</h1>
+	<h1>Open Layers</h1>
 	
 	<div id="map" class="smallmap"></div>
 		<div id="options">
@@ -58,12 +58,4 @@
     <script src="OpenLayers-2.13.1/lib/OpenLayers.js"></script>
     <script src="js/Zadatak1.js"></script>
 </body>
-<!--Na OpenLayers.html dodati:
-	Osnovni lejer -- 
-	Lejere sa geoservera --
-	Overview map --
-	Da centrira Srbiju --
-	Markere --
-	Mogucnost crtanja --
-	Merenje --
--->
+
