--- a/splash.html
+++ b/splash.html
@@ -10,5 +10,6 @@
 <p><a href="GoogleMaps.html">GoogleMaps</a></p>
 <p><a href="BingMaps.html">BingMaps</a></p>
 <p><a href="OpenLayers.html">OpenStreetMap</a></p>
-
+<p><a href="Zadatak5.html">Zadatak 5</a></p>
+<p><a href="Zadatak6.html">Zadatak 6</a></p>
 </body>
