--- a/Zadatak5.html
+++ b/Zadatak5.html
@@ -7,14 +7,14 @@
 		<link rel="stylesheet" href="style.css" type="text/css">
 		<style type="text/css">
             html, body {
-			height: 100%
-			width: 100%
+			height: 100%;
+			width: 100%;
             }
 			
 			#map {
-				margin-top:100px;
 				height: 50%;
-				width: 50%
+				width: 50%;
+				border:0px
 			}
 
             #text {
@@ -37,8 +37,8 @@
 			</tr>
 			<tr>
 				<td><input type="checkbox" name="drzava" id="drzavaToggle" onclick="toggleDrzave(this);" />
-					<label for="drzavaToggle">Drzava</label><img src="img/Legenda1.png"/></td>	
-					<td></td>
+					<label for="drzavaToggle">Drzava</label></td>	
+					<td><img src="img/Legenda1.png"/></td>
 			</tr>
 			<tr>
 				<td><input type="checkbox" name="KO" id="KOToggle" onclick="toggleKO(this);" />
